src/errors/examples/device-error-example.ts
export const DeviceErrorExample = {
  notFound: {
    message: 'device not found',
    error: 'Not Found',
    statusCode: 404,
  },
};
